@@ -10712,6 +10712,13 @@ saveLogDir="/usr/local/dev/projects/cc/logs"</td>
                     is aimed to simplify definition of plugins derived from the CruiseControl
                     in-build plugins, listed in <a href="#hierarchical">plugin indexes</a></td>
             </tr>
+            <tr>
+                <td>inherits</td>
+                <td>No</td>
+                <td>Allows to define new plugin as a "copy" of an already existing plugin, and
+                    to extend the definition copied (see plugins <a href="plugins.html#inheritance">
+                    pre-configuration</a> page for more details and examples).</td>
+            </tr>
             </tbody>
         </table>
         </div>
