@@ -23,7 +23,8 @@ build loop
 
 Plugin
 ----------------------
-* Adds from="" attribute simplifying the pre-configuration of plugins interrited from the default CC tags
+* Adds from="" attribute simplifying the pre-configuration of plugins for the default CC tags
+* Adds inherits="" attribute allowing to create simple hierarchical structure of plugins configuration
 
 PipedExecBuilder
 ----------------------
